--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -16,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.BatchSelectionScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.BatchSelectionScreenController">
    <top>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="TOP_LEFT">
          <children>
@@ -31,6 +32,9 @@
                            <HBox.margin>
                               <Insets />
                            </HBox.margin>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
                         <Region prefHeight="68.0" prefWidth="302.0" HBox.hgrow="ALWAYS" />
                         <Text fill="#f5f2f2" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Selection" HBox.hgrow="ALWAYS">
@@ -94,7 +98,7 @@
                     <content>
                       <AnchorPane minHeight="400.0" minWidth="900.0" prefHeight="456.0" prefWidth="955.0">
                            <children>
-                              <GridPane alignment="CENTER" minHeight="400.0" minWidth="900.0" prefHeight="516.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <GridPane fx:id="gridPane" alignment="CENTER" focusTraversable="true" minHeight="400.0" minWidth="900.0" prefHeight="516.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -106,7 +110,7 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+                                    <VBox fx:id="cellId00" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.halignment="CENTER" GridPane.valignment="TOP">
                                        <children>
                                           <Button fx:id="batchID1" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 1" textAlignment="CENTER">
                                              <font>
@@ -140,7 +144,7 @@
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </padding>
                                     </VBox>
-                                    <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1">
+                                    <VBox fx:id="cellId01" layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1">
                                        <children>
                                           <Button fx:id="batchID2" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 2">
                                              <font>
@@ -174,7 +178,7 @@
                                           <Insets left="5.0" />
                                        </GridPane.margin>
                                     </VBox>
-                                    <VBox layoutX="260.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="2">
+                                    <VBox fx:id="cellId02" layoutX="260.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="2">
                                        <children>
                                           <Button fx:id="batchID3" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 3">
                                              <font>
@@ -208,7 +212,7 @@
                                           <Insets left="5.0" />
                                        </GridPane.margin>
                                     </VBox>
-                                    <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="3">
+                                    <VBox fx:id="cellId03" layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="3">
                                        <children>
                                           <Button fx:id="batchID4" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 4">
                                              <font>
@@ -242,7 +246,7 @@
                                           <Insets left="5.0" />
                                        </GridPane.margin>
                                     </VBox>
-                                    <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.rowIndex="1">
+                                    <VBox fx:id="cellId10" layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.rowIndex="1">
                                        <children>
                                           <Button fx:id="batchID5" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 5">
                                              <font>
@@ -276,7 +280,7 @@
                                           <Insets left="5.0" />
                                        </GridPane.margin>
                                     </VBox>
-                                    <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                    <VBox fx:id="cellId11" layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                        <children>
                                           <Button fx:id="batchID6" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 6">
                                              <font>
@@ -310,7 +314,7 @@
                                           <Insets left="5.0" />
                                        </GridPane.margin>
                                     </VBox>
-                                    <VBox layoutX="260.0" layoutY="270.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                    <VBox fx:id="cellId12" layoutX="260.0" layoutY="270.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                        <children>
                                           <Button fx:id="batchID7" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 7">
                                              <font>
@@ -344,7 +348,7 @@
                                           <Insets left="5.0" />
                                        </GridPane.margin>
                                     </VBox>
-                                    <VBox layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                                    <VBox fx:id="cellId13" layoutX="30.0" layoutY="30.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                                        <children>
                                           <Button fx:id="batchID8" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToLectureScreen" prefHeight="140.0" prefWidth="200.0" text="BATCH 8">
                                              <font>
@@ -382,6 +386,9 @@
                                  <padding>
                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                  </padding>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </GridPane>
                            </children>
                         </AnchorPane>
