--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/CourseSelectScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/CourseSelectScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
@@ -16,31 +17,45 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.CourseSelectScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.CourseSelectScreenController">
    <top>
       <AnchorPane prefHeight="120.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER_LEFT">
          <children>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="120.0" prefWidth="1000.0" spacing="5.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
+                  <Button fx:id="backButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <HBox.margin>
+                        <Insets right="10.0" />
+                     </HBox.margin>
+                  </Button>
                   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Stream :">
                      <font>
                         <Font name="Calibri Bold Italic" size="30.0" />
                      </font>
                   </Text>
-                  <ComboBox fx:id="selectStream" onAction="#getStream" prefHeight="30.0" prefWidth="150.0" promptText="Select Stream " visibleRowCount="5">
+                  <ComboBox fx:id="selectStream" maxHeight="-Infinity" minHeight="-Infinity" minWidth="150.0" onAction="#getStream" prefHeight="30.0" prefWidth="200.0" promptText="Select Stream " visibleRowCount="5">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </ComboBox>
                   <Text fill="WHITE" layoutX="30.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course Type :">
                      <font>
                         <Font name="Calibri Bold Italic" size="30.0" />
                      </font>
                   </Text>
-                  <ComboBox fx:id="selectCourseType" layoutX="155.0" layoutY="62.0" onAction="#getCourseType" prefHeight="30.0" prefWidth="200.0" promptText="Select Course Type" visibleRowCount="5">
+                  <ComboBox fx:id="selectCourseType" layoutX="155.0" layoutY="62.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="150.0" onAction="#getCourseType" prefHeight="30.0" prefWidth="200.0" promptText="Select Course Type" visibleRowCount="5">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </ComboBox>
                   <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
                   <ImageView fx:id="logo" fitHeight="60.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
@@ -65,7 +80,7 @@
               <content>
                 <AnchorPane minHeight="400.0" minWidth="900.0">
                      <children>
-                        <GridPane alignment="CENTER" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="900.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <GridPane fx:id="gridPane" alignment="CENTER" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="900.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
