--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EvaluationScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EvaluationScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -28,6 +29,9 @@
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Text fx:id="batchName" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Name">
                      <font>
@@ -126,15 +130,15 @@
             </AnchorPane>
           <AnchorPane minHeight="400.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: white;">
                <children>
-                  <ScrollPane hbarPolicy="ALWAYS" prefHeight="623.0" prefWidth="592.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="623.0" prefWidth="592.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <content>
-                      <AnchorPane prefHeight="952.0">
+                      <AnchorPane>
                            <children>
-                              <TableView fx:id="evaluationTable" prefHeight="600.0" prefWidth="1497.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="evaluationTable" maxHeight="1800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="608.0" prefWidth="577.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columns>
-                                  <TableColumn fx:id="evaluationTableNameColumn" prefWidth="75.0" text="Name" />
-                                    <TableColumn fx:id="evaluationTableGradeColumn" prefWidth="75.0" text="Grade" />
-                                    <TableColumn fx:id="evaluationTableCertificateIssuedColumn" prefWidth="75.0" text="Certificate Issued" />
+                                  <TableColumn fx:id="evaluationTableNameColumn" minWidth="150.0" prefWidth="200.0" text="Name" />
+                                    <TableColumn fx:id="evaluationTableGradeColumn" minWidth="150.0" prefWidth="200.0" text="Grade" />
+                                    <TableColumn fx:id="evaluationTableCertificateIssuedColumn" minWidth="150.0" prefWidth="200.0" text="Certificate Issued" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
