--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/FeeRecordsScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/FeeRecordsScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -17,11 +18,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.FeeRecordsScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.FeeRecordsScreenController">
    <top>
       <AnchorPane prefHeight="80.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER_LEFT">
          <children>
@@ -34,6 +34,9 @@
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Text fx:id="batchName" fill="#f8f6f6" layoutX="416.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Name">
                      <font>
@@ -139,41 +142,37 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
                <children>
-                  <VBox prefHeight="615.0" prefWidth="692.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="1000.0" prefWidth="682.0">
-                          <content>
-                            <AnchorPane prefHeight="1000.0">
-                                 <children>
-                                    <TableView fx:id="feeTable" layoutX="-2.0" prefHeight="945.0" prefWidth="2600.0">
-                                      <columns>
-                                        <TableColumn fx:id="feeTableNameColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Name" />
-                                        <TableColumn fx:id="feeTableFeeStatusColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Fee Status" />
-                                          <TableColumn fx:id="feeTablePaymentModeColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Mode" />
-                                          <TableColumn fx:id="feeTablePlannedInstallment1Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 1" />
-                                          <TableColumn fx:id="feeTablePlannedInstallment1DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 1 Date" />
-                                          <TableColumn fx:id="feeTableActualInstallment1Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Installment 1" />
-                                          <TableColumn fx:id="feeTableActualInstallment1DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Date 1" />
-                                          <TableColumn fx:id="feeTablePlannedInstallment2Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 2" />
-                                          <TableColumn fx:id="feeTablePlannedInstallment2DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 2 Date" />
-                                          <TableColumn fx:id="feeTableActualInstallment2Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Installment 2" />
-                                          <TableColumn fx:id="feeTableActualInstallment2DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Date 2" />
-                                          <TableColumn fx:id="feeTablePlannedInstallment3Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 3" />
-                                          <TableColumn fx:id="feeTablePlannedInstallment3DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Planned Installment 3 Date" />
-                                          <TableColumn fx:id="feeTableActualInstallment3Column" editable="false" minWidth="120.0" prefWidth="-1.0" text="Installment 3" />
-                                          <TableColumn fx:id="feeTableActualInstallment3DateColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Payment Date 3" />
-                                          <TableColumn fx:id="feeTableDueAmountColumn" editable="false" minWidth="120.0" prefWidth="-1.0" text="Due Amount" />
-                                      </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                        </ScrollPane>
-                     </children>
-                  </VBox>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="612.0" prefWidth="684.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <content>
+                      <AnchorPane prefHeight="1000.0">
+                           <children>
+                              <TableView fx:id="feeTable" layoutX="-2.0" minWidth="2400.0" prefHeight="945.0" prefWidth="2598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columns>
+                                  <TableColumn fx:id="feeTableNameColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Name" />
+                                  <TableColumn fx:id="feeTableFeeStatusColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Fee Status" />
+                                    <TableColumn fx:id="feeTablePaymentModeColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Payment Mode" />
+                                    <TableColumn fx:id="feeTablePlannedInstallment1Column" editable="false" minWidth="150.0" prefWidth="-1.0" text="Planned Installment 1" />
+                                    <TableColumn fx:id="feeTablePlannedInstallment1DateColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Planned Installment 1 Date" />
+                                    <TableColumn fx:id="feeTableActualInstallment1Column" editable="false" minWidth="150.0" prefWidth="-1.0" text="Installment 1" />
+                                    <TableColumn fx:id="feeTableActualInstallment1DateColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Payment Date 1" />
+                                    <TableColumn fx:id="feeTablePlannedInstallment2Column" editable="false" minWidth="150.0" prefWidth="-1.0" text="Planned Installment 2" />
+                                    <TableColumn fx:id="feeTablePlannedInstallment2DateColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Planned Installment 2 Date" />
+                                    <TableColumn fx:id="feeTableActualInstallment2Column" editable="false" minWidth="150.0" prefWidth="-1.0" text="Installment 2" />
+                                    <TableColumn fx:id="feeTableActualInstallment2DateColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Payment Date 2" />
+                                    <TableColumn fx:id="feeTablePlannedInstallment3Column" editable="false" minWidth="150.0" prefWidth="-1.0" text="Planned Installment 3" />
+                                    <TableColumn fx:id="feeTablePlannedInstallment3DateColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Planned Installment 3 Date" />
+                                    <TableColumn fx:id="feeTableActualInstallment3Column" editable="false" minWidth="150.0" prefWidth="-1.0" text="Installment 3" />
+                                    <TableColumn fx:id="feeTableActualInstallment3DateColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Payment Date 3" />
+                                    <TableColumn fx:id="feeTableDueAmountColumn" editable="false" minWidth="150.0" prefWidth="-1.0" text="Due Amount" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
                </children>
             </AnchorPane>
         </items>
