--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,7 +23,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: purple;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.ProgressTrackingScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: purple;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.ProgressTrackingScreenController">
    <top>
       <AnchorPane prefHeight="60.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
@@ -33,7 +35,10 @@
                   <Button fx:id="back" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#GoToPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
                      <font>
                         <Font name="Calibri Bold" size="14.0" />
-                     </font></Button>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Text fx:id="batchName" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Name">
                      <HBox.margin>
                         <Insets top="20.0" />
@@ -67,7 +72,7 @@
    <center>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane maxWidth="1000.0" minHeight="200.0" minWidth="475.0" prefHeight="160.0" prefWidth="475.0">
+          <AnchorPane maxWidth="1000.0" minHeight="615.0" minWidth="475.0" prefHeight="615.0" prefWidth="475.0">
                <children>
                   <GridPane hgap="10.0" prefHeight="623.0" prefWidth="294.0" style="-fx-background-color: purple;" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
@@ -87,31 +92,46 @@
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingTotalLectures" editable="false" prefHeight="50.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <TextField fx:id="progressTrackingTotalLectures" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Calibri Bold" size="16.0" />
+                           </font></TextField>
                         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Course Duration :" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="ProgressTrackingTotalDuration" editable="false" prefHeight="50.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <TextField fx:id="ProgressTrackingTotalDuration" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Calibri Bold" size="16.0" />
+                           </font></TextField>
                         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Elapsed Duration :" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingElapsedDuration" editable="false" prefHeight="50.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                        <TextField fx:id="progressTrackingElapsedDuration" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Calibri Bold" size="16.0" />
+                           </font></TextField>
                         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Total topics :" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingTotalTopics" editable="false" prefHeight="50.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                        <TextField fx:id="progressTrackingTotalTopics" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Calibri Bold" size="16.0" />
+                           </font></TextField>
                         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Remaining Topics :" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingRemainingTopics" editable="false" prefHeight="50.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="progressTrackingRemainingTopics" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="Calibri Bold" size="16.0" />
+                           </font></TextField>
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -119,21 +139,21 @@
                   </GridPane>
                </children>
             </AnchorPane>
-          <AnchorPane>
+          <AnchorPane minHeight="615.0" minWidth="509.0">
                <children>
                   <VBox alignment="TOP_CENTER" prefHeight="614.4" prefWidth="581.6" spacing="10.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                      <children>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="300.0" prefWidth="560.0">
+                        <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="500.0" minHeight="-Infinity" prefHeight="300.0" prefWidth="560.0" VBox.vgrow="ALWAYS">
                           <content>
                             <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="297.0" prefWidth="560.0">
                                  <children>
-                                    <TableView fx:id="topicsTable" prefHeight="297.6" prefWidth="550.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <TableView fx:id="topicsTable" minWidth="200.0" prefHeight="297.0" prefWidth="560.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columns>
-                                        <TableColumn fx:id="topicsTableTopicNameColumn" prefWidth="200.0" text="Topic Name" />
-                                        <TableColumn fx:id="topicsTableTopicDurationColumn" prefWidth="200.0" text="Duration" />
+                                        <TableColumn fx:id="topicsTableTopicNameColumn" minWidth="100.0" prefWidth="200.0" text="Topic Name" />
+                                        <TableColumn fx:id="topicsTableTopicDurationColumn" minWidth="100.0" prefWidth="200.0" text="Duration" />
                                       </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -143,7 +163,10 @@
                               </AnchorPane>
                           </content>
                         </ScrollPane>
-                        <PieChart fx:id="processTrackingPieChart" prefHeight="266.0" prefWidth="417.0" title="Syllabus" VBox.vgrow="ALWAYS" />
+                        <PieChart fx:id="processTrackingPieChart" minHeight="-Infinity" minWidth="-Infinity" prefHeight="295.0" prefWidth="499.0" title="Syllabus" VBox.vgrow="ALWAYS">
+                           <effect>
+                              <ColorAdjust brightness="1.0" contrast="1.0" />
+                           </effect></PieChart>
                      </children>
                   </VBox>
                </children>
